fixing upload button not working when window is resized too small
fixes #6

--- a/StereoSketcher/StereoSketcher.css
+++ b/StereoSketcher/StereoSketcher.css
@@ -39,7 +39,7 @@ html, body, svg
 	position: absolute; 
 	top:0; 
 	left:50%; 
-	z-index: 9999;
+	z-index: 9998;
 }
 
 .innermiddle
